--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_hooks: ^0.18.6
+  auto_route: ^6.0.3
 
 dev_dependencies:
+  auto_route_generator: ^6.0.0
+  build_runner: ^2.3.3
   flutter_test:
     sdk: flutter
 
